<resources>
    <string name="app_name">Notes And Password Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="password_preview_icon">Password preview icon</string>
    <string name="title">Title</string>
    <string name="write_something_here">Write Something Here</string>
    <string name="notes_save_button">Notes save button</string>
    <string name="notes_add_button">Notes add button</string>
    <string name="username">USERNAME:</string>
    <string name="username_copy_button">Username copy button</string>
    <string name="password">PASSWORD:</string>
    <string name="ok">ok</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="save">save</string>
    <string name="enter_length">Enter Length</string>
    <string name="contains_lowercase">Contains Lowercase</string>
    <string name="contains_uppercase">Contains Uppercase</string>
    <string name="contains_numbers">Contains Numbers</string>
    <string name="contains_special_char">Contains Special Char</string>
    <string name="generate">generate</string>
    <string name="about_project">This is my minor project of Notes and Password manager. These are some features of this project-\n</string>
</resources>