<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="470dp"
    android:orientation="vertical"
    android:background="@color/box_color"
    android:gravity="center">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/enter_length"
        android:layout_margin="10dp"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/toolbar_background"
        android:textColor="@color/white"
        android:id="@+id/edt_password_length"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contains_lowercase"
            android:checked="true"
            android:background="@color/inside_dialog_box_color"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:id="@+id/cb_lowercase"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contains_uppercase"
            android:checked="true"
            android:background="@color/inside_dialog_box_color"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:id="@+id/cb_uppercase"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contains_numbers"
            android:background="@color/inside_dialog_box_color"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:id="@+id/cb_numbers"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contains_special_char"
            android:background="@color/inside_dialog_box_color"
            android:textColor="@color/white"
            android:checked="true"
            android:id="@+id/cb_special_char"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="40dp"
        android:background="@color/inside_dialog_box_color">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txt_generated_pass"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="2dp" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_copy_generated_password"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_content_copy_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/username_copy_button" />

    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:id="@+id/btn_generate_pass"/>

</LinearLayout>