<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="280dp"
    android:orientation="vertical"
    android:background="@color/box_color"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_username"
        android:layout_margin="10dp"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/toolbar_background"
        android:textColor="@color/white"
        android:id="@+id/edt_username_dialog_userpass"
        android:inputType="text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="10dp"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/toolbar_background"
            android:textColor="@color/white"
            android:id="@+id/edt_password_dialog_userpass"
            android:inputType="textPassword"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btn_store_password_dialog_showhide"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_password_show_hide"
            android:contentDescription="@string/username_copy_button" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="visible"
        android:background="@color/toolbar_background"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_save_dialog_userpass"/>

</LinearLayout>