<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="280dp"
    android:orientation="vertical"
    android:background="@color/box_color"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/username"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@color/toolbar_background"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/inside_dialog_box_color">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txt_username_dialog_userpass"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp" />
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/btn_copy_username"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_content_copy_24"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/username_copy_button" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@color/toolbar_background"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/inside_dialog_box_color">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txt_password_dialog_userpass"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp" />
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/btn_copy_password"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_content_copy_24"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/username_copy_button" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:background="@color/toolbar_background"
        android:visibility="visible"
        android:id="@+id/btn_ok_dialog_show"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>