<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:id="@+id/rl_simple_note_dialog"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:background="@color/box_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/box_color"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_note_view_dialog_timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:paddingStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edt_simple_note_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:background="@android:color/transparent"
                android:textSize="30sp"
                android:hint="@string/title"
                android:textColorHint="@color/gray"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="start"
                android:maxLength="40"
                android:inputType="text"
                tools:ignore="RtlSymmetry" />
            <View
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/toolbar_background"/>

            <EditText
                android:gravity="start"
                android:layout_marginTop="30dp"
                android:id="@+id/edt_simple_note_view_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingTop="10dp"
                android:hint="@string/write_something_here"
                android:textColorHint="@color/gray"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:inputType="text"
                android:importantForAutofill="no" />




        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btn_simple_note_save"
        android:layout_width="50dp"
        android:layout_alignParentEnd="true"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/baseline_save_24"
        android:background="@android:color/transparent"
        android:contentDescription="@string/notes_save_button" />



</RelativeLayout>